--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/main.css"
+    <link rel="stylesheet" href="./styles/main.css"/>
     <title>Elon Musk</title>
 </head>
 <body>
@@ -58,7 +58,7 @@
                 <img class="tesla-symbol" src="./images/tesla.png" alt="Tesla symbol" title="Tesla" width="250" height="270">
                 <img class="spacex-symbol" src="./images/spacex.png" alt="SpaceX symbol" title="SpaceX" width="600" height="400">
                 <img class="hyperloop-symbol" src="./images/hyperloop.png" alt="Hyperloop symbol" title="Hyperloop" width="620"    height="140">
-            </div>    
+            </div>
         <!--Click on image of Elon Musk Wikipedia-->
             <h3 class="more-info" id="wiki">Click on the image bellow to read about Elon Musk on Wikipedia</h3>
             <a href="https://en.wikipedia.org/wiki/Elon_Musk" target="_blank">
@@ -81,7 +81,7 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody>   
+                <tbody>
                     <tr>
                         <td>
                             To build rockets
@@ -99,7 +99,7 @@
                         </td>
                         <td>
                             In human mind
-                        </td>  
+                        </td>
                     </tr>
                     <tr>
                         <td>
